# Resume_Screener

ai_resume_screener/: .gitignore  License  Makefile  README.md  dcokerfile  docker-compose.dev.yml  docker-compose.yml  dockerfile  fuck.js  gunicorn.conf.py  pyproject.toml  requirements.txt
ai_resume_screener/.github/workflows/: ci.yml  deploy.yml
ai_resume_screener/app/: __init__.py  main.py
ai_resume_screener/app/api/: __init_.py  dependencies.py  middleware.py  routes.py
ai_resume_screener/app/config/: __init__.py  logging.py  settings.py
ai_resume_screener/app/core/: __init__.py  security.py
ai_resume_screener/app/services/: __init__.py  file_handler.py  nlp_processor.py  nlp_processore.py  pdf_parser.py  scorer.py
ai_resume_screener/app/utils/: __init__.py  exceptions.py  helpers.py  validators.py
ai_resume_screener/data/: jobs_categories.json  skills_database.json
ai_resume_screener/data/sample_data/job_descriptions/: sample1.txt  sample2.txt
ai_resume_screener/data/sample_data/resumes/: sample1.txt  sample2.txt
ai_resume_screener/docs/: api_documentation.md  user_guide.md
ai_resume_screener/requirements/: dev.txt  prod.txt
ai_resume_screener/requiremnts/: base.txt  dev.txt
ai_resume_screener/scripts/: downlaod_models.py  run_dev.sh  run_dev_windows.ps1  run_prod.sh  run_prod_windows.ps1  setup.sh  setup_windows.ps1
ai_resume_screener/tests/: __init__.py  conftest.py
ai_resume_screener/tests/fixtures/: sample_jd.txt
ai_resume_screener/tests/integration/: test_api.py  test_endpoints.py
ai_resume_screener/tests/unit/: test_nlp.py  test_pdf_parser.py  test_scorer.py
